--- a/agenda-app/start-here/index.html
+++ b/agenda-app/start-here/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>mdbvue</title>
     <script src="https://maps.googleapis.com/maps/api/js" async></script>
+    <link rel="manifest" href="/static/manifest.json" />
   </head>
   <body>
     <div id="app"></div>
