--- a/agenda-app/start-here/index.html
+++ b/agenda-app/start-here/index.html
@@ -6,6 +6,8 @@
     <title>mdbvue</title>
     <script src="https://maps.googleapis.com/maps/api/js" async></script>
     <link rel="manifest" href="/static/manifest.json" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.1/css/mdb.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
